<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.SettingFragment">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        tools:context=".Fragment.SettingFragment"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:paddingTop="1dp"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/ed_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="14sp"
            android:inputType="textPersonName" />
        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/studentid"
            android:paddingTop="1dp"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/ed_studentid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:paddingTop="1dp"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/layout_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/s_country"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/s_city"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/classes"
            android:paddingTop="1dp"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/s_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:paddingTop="1dp"
            android:textColor="@color/colorPrimary"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btn_link"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#E6badc58"
            android:text="@string/link"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dob"
            android:textSize="14sp"
            android:paddingTop="1dp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/ed_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pwd_old"
            android:paddingTop="1dp"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/ed_oldpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="14sp"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pwd_new"
            android:paddingTop="1dp"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/ed_newpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="14sp"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/logout"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linlayout" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linlayout" />
</android.support.constraint.ConstraintLayout>